2014-07-29  Andy Buckley  <andy.buckley@cern.ch>

	* ATLAS_2012_I1093734: fix a loop index error which led to the
	first bin value being unfilled for half the dphi plots.

	* Fix accidental passing of a GenParticle pointer as a PID code
	int in HeavyHadrons.cc. Effect limited to incorrect deductions
	about excited HF decay chains and should be small. Thanks to
	Tomasz Przedzinski for finding and reporting the issue during
	HepMC3 design work!

2014-07-23  Andy Buckley  <andy.buckley@cern.ch>

	* Fix to logspace: make sure that start and end values are exact,
	not the result of exp(log(x)).

2014-07-16  Andy Buckley  <andy.buckley@cern.ch>

	* Fix setting of library paths for doc building: Python can't
	influence the dynamic loader in its own process by setting an
	environment variable because the loader only looks at the variable
	once, when it starts.

2014-07-02  Andy Buckley  <andy.buckley@cern.ch>

	* rivet-cmphistos now uses the generic yoda.read() function rather
	than readYODA() -- AIDA files can also be compared and plotted
	directly now.

2014-06-24  Andy Buckley  <andy.buckley@cern.ch>

	* Add stupid missing <string> include and std:: prefix in Rivet.hh

2014-06-20  Holger Schulz  <hschulz@physik.hu-berlin.de>

	* bin/make-plots: Automatic generation of minor xtick labels if LogX is requested
	but data resides e.g. in [200, 700]. Fixes m_12 plots of, e.g.
	ATLAS_2010_S8817804

2014-06-17  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* pyext/rivet/Makefile.am: 'make distcheck' and out-of-source
	builds should work now.

2014-06-10  Andy Buckley  <andy.buckley@cern.ch>

	* Fix use of the install command for bash completion installation on Macs.

2014-06-07  Andy Buckley  <andy.buckley@cern.ch>

	* Removing direct includes of MathUtils.hh and others from analysis code files.

2014-06-02  Andy Buckley  <andy.buckley@cern.ch>

	* Rivet 2.1.2 release!

2014-05-30  Andy Buckley  <andy.buckley@cern.ch>
